--- a/pkgtools/bootstrap-mk-files/files/mods/SunOS.bsd.own.mk.in
+++ b/pkgtools/bootstrap-mk-files/files/mods/SunOS.bsd.own.mk.in
@@ -220,7 +220,11 @@ PRINTOBJDIR=	printf "xxx: .MAKE\n\t@echo \$${.OBJDIR}\n" | ${MAKE} -B -s -f-
 # The NOxxx variables should only be used by Makefiles.
 #
 
+.if exists(/usr/bin/mandoc)
+MKCATPAGES?=no
+.else
 MKCATPAGES?=yes
+.endif
 
 .if defined(NODOC)
 MKDOC=no
