--- a/mk/defaults/mk.conf
+++ b/mk/defaults/mk.conf
@@ -236,8 +236,12 @@ PKGSRC_USE_RELRO?= no
 # Default: no
 
 PKGSRC_USE_SSP?= no
-# Set this to yes to enable stack-smashing protection (on supported platforms).
-# Possible: yes, no
+# Configure this to enable stack smashing protection (on supported platforms).
+# Possible values:
+#	no:	Do not pass any stack protection flags
+#	yes:	-fstack-protector
+#	strong:	-fstack-protector-strong
+#	all:	-fstack-protector-all
 # Default: no
 
 # The default PREFER_PKGSRC should be empty, but due to historical reasons we have the list below.
